src/FinancialForce Accounting/objects/codaIntersectDefinition__c.object
<CustomObject>
    <customHelpPage>codahelpintersectdefinitiondef</customHelpPage>
    <description>Defines the way balances are stored.</description>
    <fields>
        <fullName>Dimension1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dimension 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dimension2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dimension 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dimension3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dimension 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FullAccountingCode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full Accounting Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GeneralLedgerAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>General Ledger Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LocalGLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Local GLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UpdateReportingBalances__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Secondary Balances</label>
        <type>Checkbox</type>
    </fields>
    <label>Intersect Definition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FullAccountingCode__c</columns>
        <columns>GeneralLedgerAccount__c</columns>
        <columns>Entity__c</columns>
        <columns>Dimension1__c</columns>
        <columns>Dimension2__c</columns>
        <columns>Dimension3__c</columns>
        <columns>Dimension4__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Intersect Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intersect Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>